working on logger

--- a/multiple-cluster-engine.ipynb
+++ b/multiple-cluster-engine.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,6 +99,8 @@
     "import itertools\n",
     "from datetime import datetime\n",
     "import copy\n",
+    "import logging\n",
+    "\n",
     "\n",
     "\n",
     "class MultipleClusterEnginePrototype(object):\n",
@@ -115,6 +117,8 @@
     "        assert os.path.isdir(self.output_dir), \"Output directory doesn't exist\"\n",
     "        assert len(file_names) > 0, \"Need input files\"\n",
     "        \n",
+    "        \n",
+    "        \n",
     "\n",
     "        # used by engine\n",
     "        self.client_dict = {}\n",
@@ -122,9 +126,11 @@
     "        self.async_results_dict = defaultdict(list) # collects all the async_results\n",
     "        self.file_to_cluster_order_dict = defaultdict(list) # remembers which files are sent to which clusters\n",
     "        self.cluster_indexes = None\n",
+    "        logging.basicConfig(filename='logger.log', level=logging.INFO)\n",
+    "        self.logger = logging.getLogger('Willie says') # Easter egg\n",
     "        \n",
     "    def start_cluster(self, n_cpus, cluster_id):\n",
-    "        print('\\tAttempting to start {}{} with {} CPUs'.format(self.cluster_job_name, cluster_id, n_cpus))\n",
+    "        self.logger.info('\\tAttempting to start {}{} with {} CPUs'.format(self.cluster_job_name, cluster_id, n_cpus))\n",
     "        os.system(\"ipcluster start --n={} --profile={}{} --daemonize\".format(\n",
     "            n_cpus, self.cluster_job_name, cluster_id)) # should deprecate to use a safer bash call\n",
     "\n",
@@ -136,35 +142,35 @@
     "            except ipp.error.TimeoutError:\n",
     "                attempt_ctr += 1\n",
     "            else:\n",
-    "                print('\\t\\tCPU processes ready for action: {}'.format(client[:].apply_async(os.getpid).get()))\n",
+    "                self.logger.info('\\t\\tCPU processes ready for action: {}'.format(client[:].apply_async(os.getpid).get()))\n",
     "                return client\n",
     "            # if there is any other error other than TimeoutError, then the error will be raised\n",
     "    \n",
     "    def start_all_clusters(self):\n",
-    "        print('\\nAttempting to start all clusters')\n",
+    "        self.logger.info('Attempting to start all clusters')\n",
     "        for cluster_id, n_cpus in enumerate(self.n_cpus_list):\n",
     "            self.client_dict[cluster_id] = self.start_cluster(n_cpus, cluster_id)\n",
     "            self.load_balanced_view_dict[cluster_id] = self.client_dict[cluster_id].load_balanced_view()            \n",
-    "        print('All clusters started\\n')\n",
+    "        self.logger.info('All clusters started')\n",
     "        self.cluster_indexes = itertools.cycle(sorted(self.load_balanced_view_dict))\n",
     "        \n",
     "    def kill_cluster(self, cluster_id): # use better arguments\n",
     "        # client = client_list[cluster_id]\n",
-    "        print('\\tAttempting to kill {}{} with CPU processes: {}'.format(\n",
+    "        self.logger.info('\\tAttempting to kill {}{} with CPU processes: {}'.format(\n",
     "            self.cluster_job_name, cluster_id, self.client_dict[cluster_id][:].apply_async(os.getpid).get()))\n",
     "        self.load_balanced_view_dict.pop(cluster_id)\n",
     "        # client.purge_everything()\n",
     "        self.client_dict[cluster_id].close()\n",
     "        os.system('ipcluster stop --profile={}{}'.format(self.cluster_job_name, cluster_id))\n",
-    "        print('\\t\\tCluster successfully killed')\n",
+    "        self.logger.info('\\t\\tCluster successfully killed')\n",
     "        time.sleep(5) # hard-coded\n",
     "        # have to mutate cluster_indexes\n",
     "        \n",
     "    def kill_all_clusters(self):\n",
-    "        print('\\nAttempting to kill all clusters')\n",
+    "        self.logger.info('Attempting to kill all clusters')\n",
     "        for cluster_id in self.client_dict:\n",
     "            self.kill_cluster(cluster_id)\n",
-    "        print('All clusters have been killed\\n')\n",
+    "        self.logger.info('All clusters have been killed')\n",
     "        \n",
     "    def run_clusters(self):        \n",
     "        small_file_ctr = 1 # determine if you want to have queue or differently ordered queue\n",
@@ -208,241 +214,44 @@
     "                            )                                              \n",
     "                    self.async_results_dict[jth_cluster].append(async_result)\n",
     "                    self.file_to_cluster_order_dict[jth_cluster].append(self.file_names[index])\n",
-    "                    print(\"{} is the {}th file and is sent to {}{} for processing\".format(self.file_names[index], ith_file, self.cluster_job_name, jth_cluster))\n",
+    "                    self.logger.info(\"{} is the {}th file and is sent to {}{} for processing\".format(self.file_names[index], ith_file, self.cluster_job_name, jth_cluster))\n",
     "                    break # break out of inner loop to determine if other clusters are available\n",
     "        # async_results_dict; save to disk for later inspection?\n",
     "        \n",
     "    def main(self):\n",
     "        start_time = datetime.now()\n",
-    "        print('\\nStarting Multiple Cluster Engine at {}\\n'.format(start_time))\n",
+    "        self.logger.info('Starting Multiple Cluster Engine at {}'.format(start_time))\n",
     "        self.start_all_clusters()\n",
     "        self.run_clusters()\n",
     "        self.kill_all_clusters()\n",
     "        end_time = datetime.now()\n",
-    "        print('\\nMultiple Cluster Engine shut down at {}'.format(end_time))\n",
-    "        print('Total run time is {} minutes\\n'.format((end_time - start_time).seconds / 60))"
+    "        self.logger.info('Multiple Cluster Engine shut down at {}'.format(end_time))\n",
+    "        self.logger.info('Total run time is {} minutes'.format((end_time - start_time).seconds / 60))\n",
+    "        self.logger.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Starting Multiple Cluster Engine at 2018-02-25 00:27:04.273235\n",
-      "\n",
-      "\n",
-      "Attempting to start all clusters\n",
-      "\tAttempting to start write_to_file0 with 4 CPUs\n",
-      "\t\tCPU processes ready for action: [2477, 2474, 2479, 2476]\n",
-      "\tAttempting to start write_to_file1 with 3 CPUs\n",
-      "\t\tCPU processes ready for action: [2545, 2546, 2548]\n",
-      "\tAttempting to start write_to_file2 with 2 CPUs\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "  0%|          | 0/10 [00:00<?, ?it/s]"
+      "100%|██████████| 10/10 [00:10<00:00,  1.00s/it]\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\t\tCPU processes ready for action: [2605, 2607]\n",
-      "All clusters started\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 10%|█         | 1/10 [00:01<00:09,  1.00s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.tmp is the 0th file and is sent to write_to_file0 for processing\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 20%|██        | 2/10 [00:02<00:08,  1.00s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9.tmp is the 1th file and is sent to write_to_file1 for processing\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 30%|███       | 3/10 [00:03<00:07,  1.00s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8.tmp is the 2th file and is sent to write_to_file2 for processing\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 40%|████      | 4/10 [00:04<00:06,  1.00s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.tmp is the 3th file and is sent to write_to_file0 for processing\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 50%|█████     | 5/10 [00:05<00:05,  1.00s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7.tmp is the 4th file and is sent to write_to_file1 for processing\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 60%|██████    | 6/10 [00:06<00:04,  1.00s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6.tmp is the 5th file and is sent to write_to_file2 for processing\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 70%|███████   | 7/10 [00:07<00:03,  1.00s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.tmp is the 6th file and is sent to write_to_file0 for processing\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 80%|████████  | 8/10 [00:08<00:02,  1.00s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.tmp is the 7th file and is sent to write_to_file1 for processing\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 90%|█████████ | 9/10 [00:09<00:01,  1.00s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4.tmp is the 8th file and is sent to write_to_file2 for processing\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "100%|██████████| 10/10 [00:10<00:00,  1.00s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.tmp is the 9th file and is sent to write_to_file0 for processing\n",
-      "\n",
-      "Attempting to kill all clusters\n",
-      "\tAttempting to kill write_to_file0 with CPU processes: [2477, 2474, 2479, 2476]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\t\tCluster successfully killed\n",
-      "\tAttempting to kill write_to_file1 with CPU processes: [2545, 2546, 2548]\n",
-      "\t\tCluster successfully killed\n",
-      "\tAttempting to kill write_to_file2 with CPU processes: [2605, 2607]\n",
-      "\t\tCluster successfully killed\n",
-      "All clusters have been killed\n",
-      "\n",
-      "\n",
-      "Multiple Cluster Engine shut down at 2018-02-25 00:28:02.562505\n",
-      "Total run time is 0.9666666666666667 minutes\n",
-      "\n"
+     "ename": "AttributeError",
+     "evalue": "'Logger' object has no attribute 'close'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-d0e899775819>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;31m# mce.start_all_clusters()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;31m# mce.run_clusters()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0mmce\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-1-5a1bad674230>\u001b[0m in \u001b[0;36mmain\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    135\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Multiple Cluster Engine shut down at {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mend_time\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    136\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Total run time is {} minutes'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mend_time\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mstart_time\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseconds\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m60\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 137\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Logger' object has no attribute 'close'"
      ]
     }
    ],
@@ -457,7 +266,7 @@
     "    'file_names': ['{}.tmp'.format(i) for i in range(10)],\n",
     "    'function_to_process': fun_func,\n",
     "    'function_kwargs_dict': {'save_string_to_file': 'pee-a-boo!'},\n",
-    "    'output_dir': '/home/ubuntu/cluster_results/' # use absolute path\n",
+    "    'output_dir': '/home/ubuntu/cluster_results/' # use absolute path since it's safer\n",
     "    }\n",
     "\n",
     "mce = MultipleClusterEnginePrototype(**mce_args)\n",
@@ -468,12 +277,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "\n",
+    "logging.basicConfig(filename='logger.log', level=logging.INFO)\n",
+    "logger = logging.getLogger('Willie says') # Easter egg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "logging.Logger"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logger.handle"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "mce.kill_all_clusters()"
+   ]
   },
   {
    "cell_type": "code",
@@ -505,7 +355,7 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -593,7 +443,7 @@
    "source": [
     "if cluster is killed, then cannot trust jth_cluster index--instead of load_balanced_list, use load_balanced_dict\n",
     "\n",
-    "# RAM writer and also progress/log writer and failre writer\n",
+    "# RAM writer and also progress/log writer and failre writer; use logging library\n",
     "# figure out queue vs deque; deque is better\n",
     "# # write a crap load of documentation"
    ]
@@ -620,6 +470,63 @@
     "# SSD for parallel reading (not HDD); determine if you are IO constrained\n",
     "# RAM usage is heavier in Python 3 than Python 2; though Python 3 memory management is better"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check if all engines killed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check if function fails"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "https://github.com/donnemartin/data-science-ipython-notebooks/tree/master/mapreduce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tail -n 50 -f temp.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
