resolved duplicate logging entries using reload

--- a/multiple-cluster-engine.ipynb
+++ b/multiple-cluster-engine.ipynb
@@ -88,11 +88,16 @@
     "import itertools\n",
     "from datetime import datetime\n",
     "import copy\n",
-    "import logging\n",
     "\n",
+    "import logging # logging can create duplicate entries if you don't reload logging\n",
+    "try:\n",
+    "    from importlib import reload # Python 3\n",
+    "except: # Python 2 reload is a builtin\n",
+    "    pass\n",
     "\n",
     "class MultipleClusterEngine(object):\n",
     "    def __init__(self, cluster_job_name, n_cpus_list, input_file_names, output_parent_dir, function_to_process, function_kwargs_dict): # always put it in as a dictionary\n",
+    "        reload(logging)\n",
     "        self.cluster_job_name = cluster_job_name\n",
     "        self.n_cpus_list = n_cpus_list\n",
     "        self.output_parent_dir = output_parent_dir\n",
@@ -130,15 +135,13 @@
     "        self.cluster_output_dir = os.path.join(self.output_parent_dir, self.cluster_job_name + str(dir_index))\n",
     "        os.makedirs(self.cluster_output_dir)\n",
     "                \n",
-    "    def create_logger(self, logger_name, log_file, level=logging.INFO):\n",
+    "    def create_logger(self, logger_name, log_file):\n",
     "        l = logging.getLogger(logger_name)\n",
     "        fileHandler = logging.FileHandler(log_file)\n",
     "        l.addHandler(fileHandler)\n",
-    "        l.setLevel(level)\n",
+    "        l.setLevel(logging.INFO)\n",
     "    \n",
     "    def activate_logger(self):\n",
-    "        #logging.basicConfig(filename='logger.log', level=logging.INFO)\n",
-    "        #self.logger = logging.getLogger('Willie says') # Easter egg\n",
     "        self.create_logger('status', os.path.join(self.cluster_output_dir, \"status.log\"))\n",
     "        self.create_logger('failure', os.path.join(self.cluster_output_dir, \"failure.log\"))\n",
     "        self.logger_status = logging.getLogger('status')\n",
@@ -218,11 +221,10 @@
     "                self.logger_failure.info('{}th cluster has error {} on file {}'.format(\n",
     "                    jth_cluster, exception.args[0], self.file_to_cluster_order_dict[jth_cluster][-1]))\n",
     "                                     \n",
-    "    def run_clusters(self):        \n",
+    "    def run_clusters(self):\n",
     "        small_file_ctr = 1 # determine if you want to have queue or differently ordered queue\n",
     "        big_file_ctr = 0\n",
     "        \n",
-    "\n",
     "        for ith_file in tqdm(range(len(self.input_file_names))):\n",
     "            for jth_cluster in self.cluster_indexes: # infinite loop\n",
     "                time.sleep(1) # hard coded delay time; want to do expected log time lag / number of clusters\n",
@@ -327,11 +329,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mce.kill_all_clusters() "
+    "mce.kill_all_clusters() # if your function_to_process failed while clusters still alive\n",
+    "# probably still have to take a look at the processes and manually kill the clusters"
    ]
   },
   {
@@ -343,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +429,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# run from Python script instead of in Jupyter Notebook with multiple instances of the class because\n",
+    "#     for some reason, the logging fails and writes the logs of the second instance in the folder for the first instance"
+   ]
   },
   {
    "cell_type": "code",
@@ -475,20 +481,11 @@
    "source": [
     "if cluster is killed, then cannot trust jth_cluster index--instead of load_balanced_list, use load_balanced_dict\n",
     "\n",
-    "# RAM writer and also progress/log writer and failre writer; use logging library\n",
+    "# check if all engines killed\n",
+    "# RAM logger\n",
     "# figure out queue vs deque; deque is better\n",
     "# # write a crap load of documentation\n",
-    "# check if all engines killed\n",
-    "# check if function fails\n",
-    "# write shell script for configuration and installation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# write shell script for configuration and installation\n",
     "# probably no async or threading required"
    ]
   },
@@ -498,8 +495,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# run from Python script instead of in Jupyter Notebook with multiple instances of the class because\n",
-    "#     for some reason, the logging fails and writes the logs of the second instance in the folder for the first instance\n",
     "# weakref\n",
     "# unittest with a mapper/reducer? after each map/reducer step, use gc.collect()\n",
     "\n",
@@ -518,16 +513,6 @@
    "outputs": [],
    "source": [
     "https://github.com/donnemartin/data-science-ipython-notebooks/tree/master/mapreduce"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tail -n 50 -f temp.py\n",
-    "write notes on logging"
    ]
   }
  ],
