--- a/multiple-cluster-engine.ipynb
+++ b/multiple-cluster-engine.ipynb
@@ -2,84 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting multiple_cluster_engine.py\n"
+     ]
+    }
+   ],
    "source": [
-    "def decorator_1(func):\n",
-    "    def func_wrapper(x):\n",
-    "        print('dec1')\n",
-    "        func(x)\n",
-    "        print('dec1')\n",
-    "    return func_wrapper\n",
-    "\n",
-    "def decorator_2(func):\n",
-    "    def func_wrapper(x):\n",
-    "        print('dec2')\n",
-    "        func(x)\n",
-    "        print('dec2')\n",
-    "    return func_wrapper\n",
-    "\n",
-    "@decorator_2\n",
-    "@decorator_1\n",
-    "def function_a(x):\n",
-    "    print(x)\n",
-    "\n",
-    "function_a(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def temp_f(name1):\n",
-    "    print('hello {}'.format(name1))\n",
-    "\n",
-    "def mapper_f(kwargs):\n",
-    "    return temp_f(**kwargs)\n",
-    "\n",
-    "mapper_f({'name1': 'lee'})\n",
-    "(lambda kwargs: temp_f(**kwargs))({'name1': 'lee'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "%%file multiple_cluster_engine.py\n",
     "import time\n",
     "import os\n",
     "import ipyparallel as ipp\n",
@@ -267,8 +202,16 @@
     "                    self.logger_status.info(\"{} is the {}th file and is sent to {}th cluster for processing\".format(\n",
     "                        self.input_file_names[index], ith_file, jth_cluster))\n",
     "                    break # break out of inner loop to determine if other clusters are available\n",
+    "\n",
     "        while not all(self.async_results_dict[jth_cluster][-1].done() for jth_cluster in self.async_results_dict): # wait for all clusters to finish\n",
     "            time.sleep(1)\n",
+    "            \n",
+    "        cluster_set = set()\n",
+    "        for jth_cluster in self.cluster_indexes:\n",
+    "            if jth_cluster in cluster_set:\n",
+    "                break\n",
+    "            cluster_set.add(jth_cluster)\n",
+    "            self.check_if_function_in_cluster_failured(jth_cluster)\n",
     "        # async_results_dict; save to disk for later inspection?\n",
     "        \n",
     "    def main(self):\n",
@@ -280,8 +223,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -292,6 +251,8 @@
     }
    ],
    "source": [
+    "from multiple_cluster_engine import MultipleClusterEngine\n",
+    "\n",
     "# create some fake files\n",
     "for i in range(10):\n",
     "    !echo {i + 10} > {i}.tmp        \n",
@@ -346,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -406,6 +367,9 @@
     }
    ],
    "source": [
+    "from multiple_cluster_engine import MultipleClusterEngine\n",
+    "\n",
+    "\n",
     "def error_func2(\n",
     "             input_file_name, cluster_output_dir, cluster_id, n_cpus, cpu_id # mandatory args, you can choose not to use them but function has to take them in \n",
     "):\n",
@@ -423,6 +387,209 @@
     "mce2 = MultipleClusterEngine(**mce_args)\n",
     "mce2.main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mce2.kill_all_clusters()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mce2 = MultipleClusterEngine(**mce_args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mce2.create_cluster_output_dir()\n",
+    "mce2.start_all_clusters()\n",
+    "# take a look at whether the results cache takes too much RAM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# RAM with cluster started -> RAM after processes calculated -> RAM after cluster killed\n",
+    "# 687 -> 1458 -> 714; 2:31; 5 times; purge and close\n",
+    "# 695 -> 1405 -> 745; 4:40; 5 times; purge, no close\n",
+    "# 684 -> 2624 -> 1951; 2:36; 5-times; no purge, do close [weird but correct result with RAM]\n",
+    "# 689 -> 1790 -> 1153; 4:55; 5-times; no purge and no close\n",
+    "\n",
+    "# further research; take a look at if using same Client, does processing slow down and RAM go up?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 60%|██████    | 3/5 [02:03<01:22, 41.32s/it]"
+     ]
+    }
+   ],
+   "source": [
+    "from ipyparallel import Client\n",
+    "from tqdm import tqdm\n",
+    "import time\n",
+    "\n",
+    "def f(x):\n",
+    "    return 'whatever' + str(x)\n",
+    "\n",
+    "for i in tqdm(range(5)):\n",
+    "    rc = Client()\n",
+    "    lv = rc.load_balanced_view()\n",
+    "    ar = lv.map_sync(f, range(10000))\n",
+    "    # rc.purge_everything()\n",
+    "    # rc.close()\n",
+    "    del ar\n",
+    "    del lv\n",
+    "    del rc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-02-28 02:06:33.464 [IPClusterStop] Stopping cluster [pid=5045] with [signal=<Signals.SIGINT: 2>]\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ipcluster stop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ipcluster start --daemonize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ipyparallel import Client\n",
+    "import os\n",
+    "import psutil\n",
+    "\n",
+    "def gen_large_arr(siz):\n",
+    "    import numpy as np\n",
+    "    np.arange(siz)\n",
+    "    return size\n",
+    "\n",
+    "rc = Client()\n",
+    "lv = rc.load_balanced_view()\n",
+    "\n",
+    "arr_s = 0.\n",
+    "amr = lv.map_async(gen_large_arr, [1e9] * 10)\n",
+    "tic = time.time()\n",
+    "for i,(result, _child) in enumerate(zip(amr, amr._children)):\n",
+    "    print((i, psutil.Process(os.getpid()).memory_info().rss/1e9, time.time()-tic))\n",
+    "    arr_s = arr_s + result\n",
+    "#    _child._result = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
