added ram profiler

--- a/RAM_Usage_Experiments.ipynb
+++ b/RAM_Usage_Experiments.ipynb
@@ -764,7 +764,66 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# RAM with cluster started -> RAM after processes calculated -> RAM after cluster killed\n",
+    "# 687 -> 1458 -> 714; 2:31; 5 times; purge and close\n",
+    "# 695 -> 1405 -> 745; 4:40; 5 times; purge, no close\n",
+    "# 684 -> 2624 -> 1951; 2:36; 5-times; no purge, do close [weird but correct result with RAM]\n",
+    "# 689 -> 1790 -> 1153; 4:55; 5-times; no purge and no close\n",
+    "\n",
+    "# looks like purging saves lots of RAM, probably deletes main hub results but RAM still exists in each kernel\n",
+    "# looks like closing saves lots of time\n",
+    "\n",
+    "# further research; take a look at if using same Client, does processing slow down and RAM go up?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from ipyparallel import Client\n",
+    "from tqdm import tqdm\n",
+    "import time\n",
+    "\n",
+    "def f(x):\n",
+    "    return 'whatever' + str(x)\n",
+    "\n",
+    "for i in tqdm(range(5)):\n",
+    "    rc = Client()\n",
+    "    lv = rc.load_balanced_view()\n",
+    "    ar = lv.map_sync(f, range(10000))\n",
+    "    rc.purge_everything()\n",
+    "    rc.close()\n",
+    "    del ar\n",
+    "    del lv\n",
+    "    del rc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!ipcluster stop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!ipcluster start --daemonize"
+   ]
   },
   {
    "cell_type": "code",
@@ -782,7 +841,28 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from ipyparallel import Client\n",
+    "import os\n",
+    "import psutil\n",
+    "import time\n",
+    "\n",
+    "def gen_large_arr(size):\n",
+    "    import numpy as np\n",
+    "    np.arange(size)\n",
+    "    return size, size * 2\n",
+    "\n",
+    "rc = Client()\n",
+    "lv = rc.load_balanced_view()\n",
+    "\n",
+    "arr_s = 0.\n",
+    "amr = lv.map_async(gen_large_arr, [3e8] * 16)\n",
+    "tic = time.time()\n",
+    "for i,(result, _child) in enumerate(zip(amr, amr._children)):\n",
+    "    print((i, psutil.Process(os.getpid()).memory_info().rss / 1e9, time.time() - tic))\n",
+    "#    arr_s = arr_s + result\n",
+    "#    _child._result = None"
+   ]
   },
   {
    "cell_type": "code",
@@ -1375,51 +1455,6 @@
    },
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import gc\n",
-    "\n",
-    "gc.collect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Variable   Type      Data/Info\n",
-      "------------------------------\n",
-      "gc         module    <module 'gc' (built-in)>\n"
-     ]
-    }
-   ],
-   "source": [
-    "whos"
-   ]
   },
   {
    "cell_type": "code",
