added memory exhausting function though kill_cluster_if_ram_limit_exceeded method is not working correctly yet

--- a/sanity_check_tests.ipynb
+++ b/sanity_check_tests.ipynb
@@ -2,6 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# All code run on AWS m4.2xlarge (8 CPUs and 32 GB of RAM) with Python 3."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "scrolled": true
@@ -11,7 +27,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:10<00:00,  1.03s/it]\n"
+      "100%|██████████| 10/10 [00:10<00:00,  1.04s/it]\n"
      ]
     }
    ],
@@ -41,6 +57,7 @@
     "mce_args = {\n",
     "    'cluster_job_name': 'write_to_file', # no spaces as it will be part of directory name\n",
     "    'n_cpus_list': [4, 3, 2], # 1st cluster is always the largest or equal to the other clusters\n",
+    "    'ram_limit_in_GB': 20.0,\n",
     "    'input_file_names': ['{}.tmp'.format(i) for i in range(10)], # absolute path preferred; I'm lazy\n",
     "    'output_parent_dir': '/home/ubuntu/cluster_results', # absolute path preferred, directory has to already exist\n",
     "    'function_to_process': silly_func,\n",
@@ -50,8 +67,7 @@
     "mce = MultipleClusterEngine(**mce_args)\n",
     "# mce.start_all_clusters()\n",
     "# mce.run_clusters()\n",
-    "mce.main()\n",
-    "# mce.kill_all_clusters() if your function_to_process failed while clusters still alive"
+    "mce.main()"
    ]
   },
   {
@@ -60,16 +76,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mce.kill_all_clusters() # if your function_to_process failed while clusters still alive\n",
+    "mce.kill_all_clusters() # if your function_to_process failed while clusters still alive, then kill clusters manually\n",
     "# probably still have to take a look at the processes and manually kill the clusters"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(list,\n",
+       "            {0: [<AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>],\n",
+       "             1: [],\n",
+       "             2: []})"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mce.async_results_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -77,12 +123,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:10<00:00,  1.03s/it]\n"
+      "100%|██████████| 10/10 [00:10<00:00,  1.04s/it]\n"
      ]
     }
    ],
@@ -97,6 +150,7 @@
     "mce_args = {\n",
     "    'cluster_job_name': 'write_to_file', # no spaces as it will be part of directory name\n",
     "    'n_cpus_list': [4, 3, 2], # 1st cluster is always the largest or equal to the other clusters\n",
+    "    'ram_limit_in_GB': 20.0,\n",
     "    'input_file_names': ['{}.tmp'.format(i) for i in range(10)],\n",
     "    'output_parent_dir': '/home/ubuntu/cluster_results', # use absolute path since it's safer, has to already exist\n",
     "    'function_to_process': error_func1,\n",
@@ -109,13 +163,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(list,\n",
+       "            {0: [<AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>],\n",
+       "             1: [],\n",
+       "             2: []})"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# mce1.kill_all_clusters()"
+    "# mce1.kill_all_clusters()\n",
+    "mce1.async_results_dict"
    ]
   },
   {
@@ -129,9 +205,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:10<00:00,  1.04s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "from multiple_cluster_engine import MultipleClusterEngine\n",
     "\n",
@@ -144,6 +228,7 @@
     "mce_args = {\n",
     "    'cluster_job_name': 'write_to_file', # no spaces as it will be part of directory name\n",
     "    'n_cpus_list': [4, 3, 2], # 1st cluster is always the largest or equal to the other clusters\n",
+    "    'ram_limit_in_GB': 20.0,\n",
     "    'input_file_names': ['{}.tmp'.format(i) for i in range(10)],\n",
     "    'output_parent_dir': '/home/ubuntu/cluster_results', # use absolute path since it's safer, has to already exist\n",
     "    'function_to_process': error_func2,\n",
@@ -156,12 +241,149 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(list,\n",
+       "            {0: [<AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>],\n",
+       "             1: [],\n",
+       "             2: []})"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# mce2.kill_all_clusters()\n",
+    "mce2.async_results_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:46<00:00,  4.68s/it]\n"
+     ]
+    }
+   ],
    "source": [
-    "# mce2.kill_all_clusters()"
+    "from multiple_cluster_engine import MultipleClusterEngine\n",
+    "\n",
+    "\n",
+    "def exceed_memory_limit( # this function takes no real args that are not mandatory\n",
+    "    # mandatory args, you can choose not to use them but function has to take them in \n",
+    "     input_file_name, cluster_output_dir, cluster_id, n_cpus, cpu_id):\n",
+    "    import time\n",
+    "    time.sleep(5)\n",
+    "    if cluster_id % 2: # if cluster_id is odd, increase RAM usage until it is killed\n",
+    "        exceed_ram_limit = []\n",
+    "        current_value = 0\n",
+    "        while True:\n",
+    "            exceed_ram_limit.append(current_value)\n",
+    "            current_value += 1\n",
+    "    return cluster_id\n",
+    "        \n",
+    "    \n",
+    "mce_args = {\n",
+    "    'cluster_job_name': 'write_to_file', # no spaces as it will be part of directory name\n",
+    "    'n_cpus_list': [4, 3, 2, 1], # 1st cluster is always the largest or equal to the other clusters\n",
+    "    'ram_limit_in_GB': 20.0,\n",
+    "    'input_file_names': ['{}.tmp'.format(i) for i in range(10)],\n",
+    "    'output_parent_dir': '/home/ubuntu/cluster_results', # use absolute path since it's safer, has to already exist\n",
+    "    'function_to_process': exceed_memory_limit,\n",
+    "    'function_kwargs_dict': {} # exceed_memory_limit takes no additional arguments    \n",
+    "    }\n",
+    "\n",
+    "mce3 = MultipleClusterEngine(**mce_args)\n",
+    "mce3.main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(list,\n",
+       "            {0: [<AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>],\n",
+       "             1: [],\n",
+       "             2: [],\n",
+       "             3: []})"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# mce3.kill_all_clusters()\n",
+    "mce3.async_results_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mce3.async_results_dict[0][0].done()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
